--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     },
     "devDependencies": {
         "babel-minify-webpack-plugin": "^0.2.0",
+        "debug": "^4.1.0",
         "dts-generator": "^2.1.0",
         "handlebars": "^4.0.11",
         "typedoc": "^0.8.0",
